--- a/www/resources/sass/app.scss
+++ b/www/resources/sass/app.scss
@@ -37,11 +37,11 @@ html, body {
     top: 18px;
 }
 
-.top-left {
-    position: absolute;
-    left: 10px;
-    top: 18px;
-}
+//.top-left {
+//    position: absolute;
+//    left: 10px;
+//    top: 18px;
+//}
 
 .content {
     text-align: center;
@@ -73,6 +73,7 @@ html, body {
 
   /* Full height */
   height: 100%; 
+  width: 100%;
 
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
@@ -85,66 +86,5 @@ html, body {
 @media only screen and (max-device-width: 1366px) {
   .parallax {
     background-attachment: scroll;
-  }
-}
-
-/* CSS for about page */
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
-
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #474e5d;
-  color: white;
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
   }
 }
