--- a/www/public/css/app.css
+++ b/www/public/css/app.css
@@ -10884,7 +10884,7 @@ a.text-dark:focus {
 
 html,
 body {
-  background-color: #38230a;
+  background-color: #ab5c03;
   color: #fb9118;
   font-family: "Nunito", sans-serif;
   font-weight: 200;
@@ -10953,5 +10953,23 @@ body {
   .parallax {
     background-attachment: scroll;
   }
+}
+
+/* Sticky Footer CSS */
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  /* Set the fixed height of the footer here */
+  line-height: 60px;
+  /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
 
