Edited text on about page and added Healthy Eating page.

--- a/www/public/css/app.css
+++ b/www/public/css/app.css
@@ -10955,12 +10955,7 @@ body {
   }
 }
 
-/* Sticky Footer CSS */
-
-html {
-  position: relative;
-  min-height: 100%;
-}
+/* Footer CSS */
 
 .footer {
   position: absolute;
