--- a/www/resources/sass/app.scss
+++ b/www/resources/sass/app.scss
@@ -89,11 +89,7 @@ html, body {
   }
 }
 
-/* Sticky Footer CSS */
-html {
-  position: relative;
-  min-height: 100%;
-}
+/* Footer CSS */
 
 .footer {
   position: absolute;
