--- a/www/resources/sass/app.scss
+++ b/www/resources/sass/app.scss
@@ -97,5 +97,5 @@ html, body {
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color: #38230a;
 }
