--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10934,27 +10934,6 @@ body {
   margin-bottom: 30px;
 }
 
-.parallax {
-  /* The image used */
-  background-image: url(/images/cooking-ingredients-with-avocado-mushrooms-eggs.jpg?c96b69a91ba6f07afeb225299c7613e7);
-  /* Full height */
-  height: 100%;
-  width: 100%;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-
-@media only screen and (max-device-width: 1366px) {
-  .parallax {
-    background-attachment: scroll;
-  }
-}
-
 /* Footer CSS */
 
 .footer {
@@ -10962,9 +10941,15 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  /* Set the fixed height of the footer here */
   line-height: 60px;
-  /* Vertically center the text there */
-  background-color: #38230a;
+  background-color: #FFFFFF;
+}
+
+.background-img {
+  background-image: url(/images/cooking-ingredients-with-avocado-mushrooms-eggs.jpg?c96b69a91ba6f07afeb225299c7613e7);
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
