--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,37 +65,22 @@ html, body {
     margin-bottom: 30px;
 }
 
-// Parallax
-
-.parallax {
-  /* The image used */
-  background-image: url('public/assets/img/cooking-ingredients-with-avocado-mushrooms-eggs.jpg');
-
-  /* Full height */
-  height: 100%; 
-  width: 100%;
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
-  .parallax {
-    background-attachment: scroll;
-  }
-}
-
 /* Footer CSS */
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #38230a;
+  height: 60px;
+  line-height: 60px;
+  background-color: #FFFFFF;
+}
+
+// Background Image
+.background-img {
+  background-image: url("public/assets/img/cooking-ingredients-with-avocado-mushrooms-eggs.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
 }
