--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,11 +76,26 @@ html, body {
   background-color: #FFFFFF;
 }
 
-// Background Image
+// Background Images
 .background-img {
   background-image: url("public/assets/img/cooking-ingredients-with-avocado-mushrooms-eggs.jpg");
-  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; 
+}
+
+.background-img-1 {
+  background-image: url("public/assets/img/food-homemade-dinner-party.jpg");
+}
+
+.background-img-2 {
+  background-image: url("public/assets/img/food-cooking-baking-kitchen.jpg");
+}
+
+.background-img-3 {
+  background-image: url("public/assets/img/breakfast-4250077_960_720.jpg");
+}
+
+.background-img-4 {
+  background-image: url("public/assets/img/Breakfast.jpg");
 }
