--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10934,15 +10934,9 @@ body {
   margin-bottom: 30px;
 }
 
-/* Footer CSS */
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #FFFFFF;
+footer {
+  background-color: #38230a;
+  color: #fb9118;
 }
 
 .background-img {
