--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -65,15 +65,11 @@ html, body {
     margin-bottom: 30px;
 }
 
-/* Footer CSS */
+// Footer CSS
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #FFFFFF;
+footer {
+  background-color: #38230a;
+  color: #fb9118;
 }
 
 // Background Images
@@ -81,7 +77,7 @@ html, body {
   background-image: url("public/assets/img/cooking-ingredients-with-avocado-mushrooms-eggs.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: cover;
 }
 
 .background-img-1 {
