--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,7 +10,7 @@
 // Main CSS
 html, body {
     background-color: #ab5c03;
-    color: #fb9118;
+    color: #fbc17c;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
     height: 100vh;
@@ -52,7 +52,7 @@ html, body {
 }
 
 .links > a {
-    color: #fb9118;
+    color: #fbc17c;
     padding: 0 25px;
     font-size: 13px;
     font-weight: 600;
@@ -94,4 +94,29 @@ footer {
 
 .background-img-4 {
   background-image: url("public/assets/img/Breakfast.jpg");
+}
+
+// Image Darken
+
+.banner-darken
+{
+    position: relative;
+}
+
+.banner-darken:after
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.banner-darken-components h1, h2, h3, h4, p, a, title
+{
+    position: relative;
+    z-index: 1;
 }
